# forestry

./: .gitignore  CMakeLists.txt  Cargo.toml  DOCS.md  LICENSE  Makefile  README.md  build.sh  build.zig  build.zig.zon  forestry.h  test
.github/workflows/: rust.yml  rust_macos.yml  rust_windows.yml
.zig-cache/o/35d2f34e33f5630ffefbc147732bf368/: test
include/: forestry.h
src/: forestry.c  lib.rs  logs.rs  test.c  tests.rs  tests.zig
