[package]
name = "forestry"
description = "A simple cross-platform CLI logging library for Rust"
version = "1.5.0"
edition = "2021"
authors = ["uptu <uptu@uptu.dev>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/uptudev/forestry"
repository = "https://github.com/uptudev/forestry"
readme = "README.md"
keywords = ["logging", "cli", "console", "color", "string"]

[features]
plain = ["colored/no-color"]
async = []

[dependencies]
colored = "2.1.0"

[dev-dependencies]
futures = { version = "0.3" }
